load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/midnightconman/ibazel-profiler-to-yabar
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/midnightconman/ibazel-profiler-to-yabar",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "ibazel-profiler-to-yabar",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
