load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

# gazelle:prefix github.com/midnightconman/ibazel-profiler-to-yabar
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/midnightconman/ibazel-profiler-to-yabar",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_image(
    name = "image",
	  base = "@alpine//image",
    embed = [":go_default_library"],
    importpath = "github.com/midnightconman/ibazel-profiler-to-yabar",
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

go_binary(
    name = "ibazel-profiler-to-yabar",
    embed = [":go_default_library"],
    importpath = "github.com/midnightconman/ibazel-profiler-to-yabar",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/midnightconman/ibazel-profiler-to-yabar",
)

container_push(
   name = "push",
   image = ":image",
   format = "Docker",
   registry = "index.docker.io",
   repository = "midnightconman/ibazel-profiler-to-yabar",
   tag = "latest",
)
